test/valid/AbstractClassExtendsConcreteClass/Concrete2.plume
/**
 * Uma classe concreta que extende uma class abstracta
 * e faz override do metodo profName
 *
 * @author 37059, Rita Henriques
 * @version $Id: Concrete2.plume 482 2012-06-04 19:07:29Z tcomp000 $
 */
class Concrete2 extends AbstractClass is

  method override profName : (name : String) -> String is
  		"Sr. Prof. " + name
  		
  method main : () -> String is
  		profName( "Vasco Vasconcelos" )

