test/invalid/ClassExtendsItselfDirectly/ClassExtendsItselfDirectly.plume
/**
 * Uma classe extende a propria classe
 *
 * @author 37059, Rita Henriques
 * @version $Id: ClassExtendsItselfDirectly.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class ClassExtendsItselfDirectly extends ClassExtendsItselfDirectly is
  
  field tipo : String
  
  method getTipo : () -> String is
		tipo